// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Intro Screens renders 1`] = `
<Modal
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <RCTScrollView
        bottomButton={false}
        bounces={false}
        data={
          Array [
            Object {
              "content": <View />,
              "name": "Page 1",
            },
          ]
        }
        disableVirtualization={false}
        extraData={750}
        getItem={[Function]}
        getItemCount={[Function]}
        horizontal={true}
        initialNumToRender={10}
        keyExtractor={[Function]}
        maxToRenderPerBatch={10}
        numColumns={1}
        numberOfButtons={2}
        onContentSizeChange={[Function]}
        onDone={[Function]}
        onEndReachedThreshold={2}
        onLayout={[Function]}
        onMomentumScrollEnd={[Function]}
        onScroll={[Function]}
        onScrollBeginDrag={[Function]}
        onScrollEndDrag={[Function]}
        onSkip={[Function]}
        onSlideChange={[Function]}
        pagingEnabled={true}
        removeClippedSubviews={false}
        renderItem={[Function]}
        scrollEventThrottle={50}
        showDoneButton={true}
        showNextButton={true}
        showPrevButton={true}
        showSkipButton={true}
        showsHorizontalScrollIndicator={false}
        slides={
          Array [
            Object {
              "content": <View />,
              "name": "Page 1",
            },
          ]
        }
        stickyHeaderIndices={Array []}
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
        styles={
          Object {
            "activeDotStyle": Object {
              "backgroundColor": "rgba(255, 255, 255, .9)",
            },
            "bottomButtonsContainer": Object {},
            "buttonDone": Object {},
            "buttonNext": Object {},
            "buttonPrev": Object {},
            "buttonSkip": Object {},
            "buttonText": Object {
              "alignSelf": "center",
              "backgroundColor": "transparent",
              "color": "white",
              "fontSize": 18,
              "padding": 12,
            },
            "cardContainer": Object {
              "backgroundColor": "rgba(0, 0, 0, 0.5)",
              "bottom": 0,
              "left": 0,
              "paddingHorizontal": 50,
              "paddingVertical": 150,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            "dotStyle": Object {
              "backgroundColor": "rgba(0, 0, 0, .2)",
            },
            "fullscreenContainer": Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            "leftButton": Object {
              "left": 0,
              "position": "absolute",
            },
            "paginationContainer": Object {},
            "paginationDots": Object {},
            "rightButton": Object {
              "position": "absolute",
              "right": 0,
            },
          }
        }
        updateCellsBatchingPeriod={50}
        viewabilityConfigCallbackPairs={Array []}
        windowSize={21}
      >
        <View>
          <View
            onLayout={[Function]}
            style={
              Array [
                Object {
                  "flexDirection": "row",
                },
                null,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignContent": "stretch",
                    "flex": 1,
                    "width": 750,
                  },
                ]
              }
            >
              <View />
            </View>
          </View>
        </View>
      </RCTScrollView>
      <View
        style={
          Array [
            Object {
              "bottom": 16,
              "left": 16,
              "position": "absolute",
              "right": 16,
            },
            Object {},
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 16,
                "justifyContent": "center",
                "margin": 16,
              },
              Object {},
            ]
          }
        />
        <View
          style={
            Object {
              "position": "absolute",
              "right": 0,
            }
          }
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <Text
              style={
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "transparent",
                  "color": "white",
                  "fontSize": 18,
                  "padding": 12,
                }
              }
            >
              Done
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`Intro Screens renders with 1 bottom button 1`] = `
<Modal
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <RCTScrollView
        bottomButton={true}
        bounces={false}
        data={
          Array [
            Object {
              "content": <View />,
              "name": "Page 1",
            },
          ]
        }
        disableVirtualization={false}
        extraData={750}
        getItem={[Function]}
        getItemCount={[Function]}
        horizontal={true}
        initialNumToRender={10}
        keyExtractor={[Function]}
        maxToRenderPerBatch={10}
        numColumns={1}
        numberOfButtons={1}
        onContentSizeChange={[Function]}
        onDone={[Function]}
        onEndReachedThreshold={2}
        onLayout={[Function]}
        onMomentumScrollEnd={[Function]}
        onScroll={[Function]}
        onScrollBeginDrag={[Function]}
        onScrollEndDrag={[Function]}
        onSkip={[Function]}
        onSlideChange={[Function]}
        pagingEnabled={true}
        removeClippedSubviews={false}
        renderItem={[Function]}
        scrollEventThrottle={50}
        showDoneButton={true}
        showNextButton={true}
        showPrevButton={false}
        showSkipButton={false}
        showsHorizontalScrollIndicator={false}
        slides={
          Array [
            Object {
              "content": <View />,
              "name": "Page 1",
            },
          ]
        }
        stickyHeaderIndices={Array []}
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
        styles={
          Object {
            "activeDotStyle": Object {
              "backgroundColor": "rgba(255, 255, 255, .9)",
            },
            "bottomButtonsContainer": Object {},
            "buttonDone": Object {},
            "buttonNext": Object {},
            "buttonPrev": Object {},
            "buttonSkip": Object {},
            "buttonText": Object {
              "alignSelf": "center",
              "backgroundColor": "transparent",
              "color": "white",
              "fontSize": 18,
              "padding": 12,
            },
            "cardContainer": Object {
              "backgroundColor": "rgba(0, 0, 0, 0.5)",
              "bottom": 0,
              "left": 0,
              "paddingHorizontal": 50,
              "paddingVertical": 150,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            "dotStyle": Object {
              "backgroundColor": "rgba(0, 0, 0, .2)",
            },
            "fullscreenContainer": Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            "leftButton": Object {
              "left": 0,
              "position": "absolute",
            },
            "paginationContainer": Object {},
            "paginationDots": Object {},
            "rightButton": Object {
              "position": "absolute",
              "right": 0,
            },
          }
        }
        updateCellsBatchingPeriod={50}
        viewabilityConfigCallbackPairs={Array []}
        windowSize={21}
      >
        <View>
          <View
            onLayout={[Function]}
            style={
              Array [
                Object {
                  "flexDirection": "row",
                },
                null,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignContent": "stretch",
                    "flex": 1,
                    "width": 750,
                  },
                ]
              }
            >
              <View />
            </View>
          </View>
        </View>
      </RCTScrollView>
      <View
        style={
          Array [
            Object {
              "bottom": 16,
              "left": 16,
              "position": "absolute",
              "right": 16,
            },
            Object {},
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 16,
                "justifyContent": "center",
                "margin": 16,
              },
              Object {},
            ]
          }
        />
        <View
          style={
            Object {
              "alignItems": "stretch",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              accessible={true}
              isTVSelectable={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "justifyContent": "center",
                    },
                    Object {},
                  ]
                }
              >
                <Text
                  style={
                    Object {
                      "alignSelf": "center",
                      "backgroundColor": "transparent",
                      "color": "white",
                      "fontSize": 18,
                      "padding": 12,
                    }
                  }
                >
                  Done
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`Intro Screens renders with 2 bottom button 1`] = `
<Modal
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <RCTScrollView
        bottomButton={true}
        bounces={false}
        data={
          Array [
            Object {
              "content": <View />,
              "name": "Page 1",
            },
          ]
        }
        disableVirtualization={false}
        extraData={750}
        getItem={[Function]}
        getItemCount={[Function]}
        horizontal={true}
        initialNumToRender={10}
        keyExtractor={[Function]}
        maxToRenderPerBatch={10}
        numColumns={1}
        numberOfButtons={2}
        onContentSizeChange={[Function]}
        onDone={[Function]}
        onEndReachedThreshold={2}
        onLayout={[Function]}
        onMomentumScrollEnd={[Function]}
        onScroll={[Function]}
        onScrollBeginDrag={[Function]}
        onScrollEndDrag={[Function]}
        onSkip={[Function]}
        onSlideChange={[Function]}
        pagingEnabled={true}
        removeClippedSubviews={false}
        renderItem={[Function]}
        scrollEventThrottle={50}
        showDoneButton={true}
        showNextButton={true}
        showPrevButton={true}
        showSkipButton={true}
        showsHorizontalScrollIndicator={false}
        slides={
          Array [
            Object {
              "content": <View />,
              "name": "Page 1",
            },
          ]
        }
        stickyHeaderIndices={Array []}
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
        styles={
          Object {
            "activeDotStyle": Object {
              "backgroundColor": "rgba(255, 255, 255, .9)",
            },
            "bottomButtonsContainer": Object {},
            "buttonDone": Object {},
            "buttonNext": Object {},
            "buttonPrev": Object {},
            "buttonSkip": Object {},
            "buttonText": Object {
              "alignSelf": "center",
              "backgroundColor": "transparent",
              "color": "white",
              "fontSize": 18,
              "padding": 12,
            },
            "cardContainer": Object {
              "backgroundColor": "rgba(0, 0, 0, 0.5)",
              "bottom": 0,
              "left": 0,
              "paddingHorizontal": 50,
              "paddingVertical": 150,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            "dotStyle": Object {
              "backgroundColor": "rgba(0, 0, 0, .2)",
            },
            "fullscreenContainer": Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            "leftButton": Object {
              "left": 0,
              "position": "absolute",
            },
            "paginationContainer": Object {},
            "paginationDots": Object {},
            "rightButton": Object {
              "position": "absolute",
              "right": 0,
            },
          }
        }
        updateCellsBatchingPeriod={50}
        viewabilityConfigCallbackPairs={Array []}
        windowSize={21}
      >
        <View>
          <View
            onLayout={[Function]}
            style={
              Array [
                Object {
                  "flexDirection": "row",
                },
                null,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignContent": "stretch",
                    "flex": 1,
                    "width": 750,
                  },
                ]
              }
            >
              <View />
            </View>
          </View>
        </View>
      </RCTScrollView>
      <View
        style={
          Array [
            Object {
              "bottom": 16,
              "left": 16,
              "position": "absolute",
              "right": 16,
            },
            Object {},
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 16,
                "justifyContent": "center",
                "margin": 16,
              },
              Object {},
            ]
          }
        />
        <View
          style={
            Object {
              "alignItems": "stretch",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              accessible={true}
              isTVSelectable={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "justifyContent": "center",
                    },
                    Object {},
                  ]
                }
              >
                <Text
                  style={
                    Object {
                      "alignSelf": "center",
                      "backgroundColor": "transparent",
                      "color": "white",
                      "fontSize": 18,
                      "padding": 12,
                    }
                  }
                >
                  Done
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;
